// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_checkValue invalid " __lazy-wildcards/subject/__env-elem/stairs/prompts__ " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "/__" in value near "ldcards/subject/__env-elem/stairs"",
  "index": 25,
  "match": "/__",
  "near": "ldcards/subject/__env-elem/stairs",
  "value": " __lazy-wildcards/subject/__env-elem/stairs/prompts__ ",
}
`;

exports[`_checkValue invalid " __lazy-wildcards/subject/env-elem/stairs/prompts_ " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "_ " in value near "/stairs/prompts_ "",
  "index": 49,
  "match": "_ ",
  "near": "/stairs/prompts_ ",
  "value": " __lazy-wildcards/subject/env-elem/stairs/prompts_ ",
}
`;

exports[`_checkValue invalid " __lazy-wildcards/subject/env-elem__/stairs/prompts__ " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "__/" in value near "ubject/env-elem__/stairs/prompts_"",
  "index": 34,
  "match": "__/",
  "near": "ubject/env-elem__/stairs/prompts_",
  "value": " __lazy-wildcards/subject/env-elem__/stairs/prompts__ ",
}
`;

exports[`_checkValue invalid " _lazy-wildcards/subject/env-elem/stairs/prompts__ " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] " _" in value near " _lazy-wildcards/"",
  "index": 0,
  "match": " _",
  "near": " _lazy-wildcards/",
  "value": " _lazy-wildcards/subject/env-elem/stairs/prompts__ ",
}
`;

exports[`_checkValue invalid " {__lazy-wildcards/subject/env-elem/stairs/prompts_} " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "_}" in value near "/stairs/prompts_} "",
  "index": 50,
  "match": "_}",
  "near": "/stairs/prompts_} ",
  "value": " {__lazy-wildcards/subject/env-elem/stairs/prompts_} ",
}
`;

exports[`_checkValue invalid " {_lazy-wildcards/subject/env-elem/stairs/prompts__} " 1`] = `
{
  "error": "Invalid Syntax [UNSAFE_SYNTAX] "{_" in value near " {_lazy-wildcards/"",
  "index": 1,
  "match": "{_",
  "near": " {_lazy-wildcards/",
  "value": " {_lazy-wildcards/subject/env-elem/stairs/prompts__} ",
}
`;

exports[`doc.options 1`] = `
{
  "_directives": Directives {
    "atNextDocument": false,
    "docEnd": false,
    "docStart": null,
    "tags": {
      "!!": "tag:yaml.org,2002:",
    },
    "yaml": {
      "explicit": false,
      "version": "1.2",
    },
  },
  "allowEmptyDocument": true,
  "intAsBigInt": false,
  "keepSourceTokens": false,
  "logLevel": "warn",
  "prettyErrors": true,
  "strict": true,
  "stringKeys": false,
  "toStringDefaults": {
    "allowMultiRoot": undefined,
    "blockQuote": true,
    "collectionStyle": "block",
    "defaultKeyType": "PLAIN",
    "defaultStringType": "PLAIN",
    "disableUniqueItemValues": undefined,
    "disableUnsafeQuote": undefined,
    "minifyPrompts": undefined,
    "uniqueKeys": true,
  },
  "uniqueKeys": true,
  "version": "1.2",
}
`;

exports[`matchDynamicPromptsWildcards " __scope/season_clothes(season= )__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season= )__",
  "variables": "(season= )",
}
`;

exports[`matchDynamicPromptsWildcards " __scope/season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards " __season_clothes(season= )__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season= )__",
  "variables": "(season= )",
}
`;

exports[`matchDynamicPromptsWildcards " __season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__@scope/season_clothes(season=__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "@",
  "name": "scope/season_clothes",
  "source": "__@scope/season_clothes(season=__scope/season_clothes__)__",
  "variables": "(season=__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__@season_clothes(season=__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "@",
  "name": "season_clothes",
  "source": "__@season_clothes(season=__season_clothes__)__",
  "variables": "(season=__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__~scope/season_clothes(season=__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "scope/season_clothes",
  "source": "__~scope/season_clothes(season=__scope/season_clothes__)__",
  "variables": "(season=__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__~scope/season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "scope/season_clothes",
  "source": "__~scope/season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__~season_clothes(season=__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "season_clothes",
  "source": "__~season_clothes(season=__season_clothes__)__",
  "variables": "(season=__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__~season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": "~",
  "name": "season_clothes",
  "source": "__~season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!__scope/season_clothes__)__",
  "variables": "(season=!__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!{!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!{!summer|autumn|winter|spring})__",
  "variables": "(season=!{!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!{@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!{@summer|autumn|winter|spring})__",
  "variables": "(season=!{@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=!{summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=!{summer|autumn|winter|spring})__",
  "variables": "(season=!{summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=__@scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=__@scope/season_clothes__)__",
  "variables": "(season=__@scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=__~scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=__~scope/season_clothes__)__",
  "variables": "(season=__~scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=__scope/season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=__scope/season_clothes__)__",
  "variables": "(season=__scope/season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season={!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season={!summer|autumn|winter|spring})__",
  "variables": "(season={!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season={@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season={@summer|autumn|winter|spring})__",
  "variables": "(season={@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season={summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season={summer|autumn|winter|spring})__",
  "variables": "(season={summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__scope/season_clothes__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "scope/season_clothes",
  "source": "__scope/season_clothes__",
  "variables": undefined,
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!__season_clothes__)__",
  "variables": "(season=!__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!{!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!{!summer|autumn|winter|spring})__",
  "variables": "(season=!{!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!{@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!{@summer|autumn|winter|spring})__",
  "variables": "(season=!{@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=!{summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=!{summer|autumn|winter|spring})__",
  "variables": "(season=!{summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=)__ " 1`] = `
{
  "isFullMatch": false,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=)__",
  "variables": "(season=)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=__@season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=__@season_clothes__)__",
  "variables": "(season=__@season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=__~season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=__~season_clothes__)__",
  "variables": "(season=__~season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=__season_clothes__)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=__season_clothes__)__",
  "variables": "(season=__season_clothes__)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season={!summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season={!summer|autumn|winter|spring})__",
  "variables": "(season={!summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season={@summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season={@summer|autumn|winter|spring})__",
  "variables": "(season={@summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season={summer|autumn|winter|spring})__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season={summer|autumn|winter|spring})__",
  "variables": "(season={summer|autumn|winter|spring})",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes(season=winter)__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes(season=winter)__",
  "variables": "(season=winter)",
}
`;

exports[`matchDynamicPromptsWildcards "__season_clothes__" 1`] = `
{
  "isFullMatch": true,
  "isStarWildcards": false,
  "keyword": undefined,
  "name": "season_clothes",
  "source": "__season_clothes__",
  "variables": undefined,
}
`;
